# lean-runner

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  config.yaml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  run_test_in_docker.sh  sitemap.xml  test.lean  test.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  docs.yaml  golang-ci.yaml  python-ci.yaml
api/: index.html
bak/client/: pyproject.toml
bak/server/: pyproject.toml
bak/server_py/: pyproject.toml
client/: index.html
client/config/: index.html
client/install/: index.html
client/lean_runner/client/: client.py
client/lean_runner/grpc/: prove_pb2.py  prove_pb2_grpc.py  utils_pb2.py  utils_pb2_grpc.py
client/lean_runner/proof/: proto.py
client/simple-query/: index.html
client/submit-get-result/: index.html
client/verify-all/: index.html
demo/: .gitignore  bak.md  eval_minif2f.py  eval_minif2f_async.py  eval_minif2f_sync.py  health.py  minif2f.py  query.ipynb  sample_query.py  simple_query.py  simple_query_wrong.py  submit_query.py  submit_query_async.py  submit_query_sync.py  test2.lean  test3.lean  test4.lean  test5.lean  verify_all_async_iterator.py  verify_all_sync_iterator.py
dev/docs/: index.html
dev/docs/client/: .buildinfo  index.html  objects.inv  searchindex.js
dev/docs/server/: .buildinfo  index.html  objects.inv  searchindex.js
dev/todos/: index.html
docs/: .buildinfo  api.md  genindex.html  index.html  index.md  install.md  modules.html  objects.inv  py-modindex.html  quick-start.md  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  modules.doctree
docs/_modules/: index.html
docs/client/: .buildinfo  README.md  config.md  index.html  index.md  install.md  objects.inv  searchindex.js  simple-query.md  submit-get-result.md  verify-all.md
docs/client/.doctrees/: environment.pickle  index.doctree  modules.doctree
docs/dev/: create_docker.md  docs.md  go-server-dev-guide.md  manual_ubuntu_setup.md  server_structure.md  todos.md
docs/genindex/: index.html
docs/javascripts/: mathjax.js
docs/modules/: index.html
docs/py-modindex/: index.html
docs/search/: index.html
docs/server/: api.md  config.md  deepseek.md  docker.md  index.html  install.md  objects.inv  run.md  searchindex.js  source.md
javascripts/: mathjax.c40e7b.min.js
lean_server/: __init__.py
lean_server/app/: lifespan.py  prove.py  serve.py
lean_server/cli/: args.py  lifespan.py  serve.py
lean_server/config/: config.py
lean_server/database/: proof.py
lean_server/manager/: proof_manager.py
lean_server/proof/: config.py  lean.py
playground/: Main.lean  Playground.lean  lake-manifest.json
proto/: db.proto  prove.proto  utils.proto
prover/: env.py  lean_runner.py
prover/config/: __init__.py  config.py
prover/proof/: lean.py
quick-start/: index.html
scripts/: generate_grpc.sh  lean_runner.sh  update_docs.sh  update_playground.sh  update_python_env.sh
search/: search_index.json
server/: go.mod  go.sum
server/api/: index.html
server/config/: index.html
server/configs/: README.md  default.yaml  example.yaml
server/deepseek/: index.html
server/docker/: index.html
server/examples/: concurrency_example.go
server/source/: index.html
sphinx_docs/source/: conf.py  modules.rst
(+104 files in other folders)
