[project]
name = "lean-server"
version = "0.1.0"
description = "The description of the package"

license = "MIT"
readme = "README.md"

# No python upper bound for package metadata
requires-python = ">=3.12"

authors = [
    { name = "Pu Fanyi", email = "FPU001@e.ntu.edu.sg" },
]

# Keywords (translated to tags on the package index)
keywords = ["lean-server"]

dependencies = [
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "loguru>=0.7.2",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "rich>=14.1.0",
]

[project.urls]
repository = "https://github.com/pufanyi/lean-server"
homepage = "https://github.com/pufanyi/lean-server"

# Scripts are easily expressed
[project.scripts]
lean-server = 'lean_server.cli.serve:main'

[tool.poetry.dependencies]
# Python upper bound for locking
python = ">=3.12,<4.0"
# Version-specific dependencies with prereleases allowed
tomli = { allow-prereleases = true }

# Dependency groups are supported for organizing your dependencies
[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0"

# ...and can be installed only when explicitly requested
# via 'poetry install --with docs'
[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
Sphinx = "^5.1.1"

[tool.ruff]
# Rule selection:
# E: pycodestyle (style errors)
# F: Pyflakes (logical errors)
# I: isort (import sorting)
# B: flake8-bugbear (bug detection)
# UP: pyupgrade (syntax modernization)
# A: flake8-builtins (built-in shadowing)
# C4: flake8-comprehensions (comprehension best practices)
lint.select = ["E", "F", "I", "B", "UP", "A", "C4"]

[tool.setuptools.packages.find]
include = ["lean_server"]
